[workspace]
members = ["capukv", "proto"]
resolver = "3"

[workspace.dependencies]
monke = { git = "https://github.com/aethne0/monke-util", branch = "master" }
prost = "0.14.1"
tonic = "0.14.2"
tonic-prost = "0.14.2"
uuid = { version = "1.18.1" }
clap = { version = "4.5.51" }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
bytes = "1.10.1"
tokio = { version = "1.47.1" }
im = "15.1.0"
rust-rocksdb = { version = "0.44.2" }
rustc-hash = "2.1.1"
paste = "1.0.15"
rand = "0.9.2"
proto = { path = "proto" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
