[package]
name = "capukv-client"
version = "0.1.0"
edition = "2024"

[dependencies]
monke = { workspace = true }
proto = { workspace = true, features = ["client"] }

prost = { workspace = true }
tonic = { workspace = true }
tonic-prost = { workspace = true }
uuid = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
bytes = { workspace = true }

[build-dependencies]
tonic-build = "0.14.2"
tonic-prost-build = "0.14.2"
