[package]
name = "proto"
version = "0.1.0"
edition = "2024"

[dependencies]
prost = { workspace = true }
tonic = { workspace = true }
tonic-prost = { workspace = true }
paste = { workspace = true }

[build-dependencies]
tonic-prost-build = "0.14.2"

[features]
server = []
client = []
default = ["server", "client"]
